# 3DViewer-Project-in-Qt-CPP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
application/: main.cc
application/camera/: camera.cc  camera.h
application/controler/: mainwindow.cc  mainwindow.h
application/information/mesh_information/: mesh_information.h
application/information/model_information/: model_information.h
application/light/: illumination.cc  illumination.h  light.cc  light.h  point_light.h  spot_light.h
application/mesh/: mesh.cc  mesh.h
application/model/: model.cc  model.h
application/opengl/: v3d_gl.cc  v3d_gl.h
application/savior/: dialog_format.cc  dialog_format.h  savior.cc  savior.h
application/scene/: scene.cc  scene.h
application/settings/: global_settings.h
application/settings/model_settings/: model_settings.h
documentation/: info.texi
forms/: dialog_format.ui  mainwindow.ui  wgt_width.ui
lib/gif_maker/: CMakeLists.txt
lib/gifimage/: qgifglobal.h  qgifimage.cpp  qgifimage_p.h
lib/giflib/: dgif_lib.c  egif_lib.c  quantize.c
shaders/: cubemap.frag  cubemap.vert  edge.frag  edge.geom  edge.vert  material.frag  material.vert  material_flat.vert  scene.frag  scene.vert  shader.frag  shader.vert  shader_flat.frag  shader_flat.vert  vertex.frag  vertex.vert
widgets/wgt_width/: wgt_width.cc  wgt_width.h
